<resources>
    <string name="app_name">FindYourSherutLeumi</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="email_hint">email…</string>
    <string name="password">Password</string>
    <string name="password_hint">password…</string>
    <string name="login_btn">sign in</string>
    <string name="sign_up">Sign Up</string>
    <string name="user_type">Choose User type</string>
    <string name="logo">logo</string>
    <string name="next_btn">next</string>
    <string name="coordinator_sign_up">Coordinator Sign Up</string>
    <string name="submit_btn">submit</string>
    <string name="first_name">First Name</string>
    <string name="first_name_hint">first name…</string>
    <string name="last_name">Last Name</string>
    <string name="last_name_hint">last name…</string>
    <string name="organization">Organization</string>
    <string name="organization_hint">organization…</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone_number_hint">phone number…</string>
    <string name="applicant_sign_up">Applicant Sign Up</string>
    <string name="city">City</string>
    <string name="city_hint">city…</string>
    <string name="search_bar">Search</string>
    <string name="no_result">No Result</string>
    <string name="category">Category</string>
    <string name="country">Country</string>
    <string name="address">Address</string>
    <string name="has_apartment">Has Apartment</string>
    <string name="is_second_year_only">Is Second Year Only</string>
    <string name="is_morning_service">Is Morning Service</string>
    <string name="description">Description</string>
    <string name="is_evening_service">Is Evening Service</string>
    <string name="coordinator">Coordinator</string>
    <string name="coordinator_contact">Coordinator Contact</string>
    <string name="languages_bar">Languages</string>
    <string name="show_details">show details</string>
    <string name="add_new_service">Add New Service</string>
    <string name="service">Service</string>
    <string name="service_name_hint">service name…</string>
    <string name="category_hint">category…</string>
    <string name="country_hint">country…</string>
    <string name="address_hint">address…</string>
    <string name="description_hint">description…</string>
    <string name="coordinator_hint">coordinator name…</string>
    <string name="coordinator_contact_hint">coordinator contact…</string>
    <string name="add_btn">add</string>
    <string name="search">search by title, city or category…</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="more_menu">More</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="edit_details">Edit Details</string>
    <string name="update_btn">update</string>
    <string name="edit_services_list">Edit Services List</string>
    <string name="logout_dialog">Are you sure you want to logout ?</string>
    <string name="delete">Delete</string>
    <string name="delete_service_dialog">Are you sure you want to delete this item?</string>
    <string name="item_deleted_toast">Item deleted successfully</string>
    <string name="connection_failed_toast">Connection Failed, please try again later…</string>
    <string name="details_updated_toast">Your details updated successfully!</string>
    <string name="delete_user_btn">Delete User</string>
    <string name="delete_user_dialog">Are you sure you want to delete your account?</string>
    <string name="user_deleted_toast">User deleted successfully</string>
    <string name="fields_not_filled">Please fill all required fields</string>
    <string name="pass_length_short">password must to be at least 6 characters</string>
    <string name="email_address_not_valid">email address is not valid</string>
    <string name="new_service_added">New service added successfully</string>
    <string name="no_items">No items in the list yet</string>
    <string name="email_does_not_exist">Email does not exist</string>
    <string name="email_and_password_does_not_match">Email and password does not match</string>
    <string name="send_email">send email</string>
    <string name="to">To</string>
    <string name="Subject">subject</string>
    <string name="message">Message</string>
    <string name="send">send</string>
    <string name="open_with">choose an email client</string>
    <string name="edit_service">Edit service</string>
    <string name="forgot_password">forgot password</string>
    <string name="enter_btn">enter</string>
    <string name="forgot_password_title">Please enter your registered email, to receive a new password to your email:</string>
    <string name="enter_email">Please enter an email address</string>
    <string name="email_sent">email sent. check your email</string>
    <string name="add">add</string>
    <string name="choose_language">Choose Language…</string>
    <string name="question_mark">\?</string>

    <string-array name="user_types_array">
        <item>Applicant</item>
        <item>Coordinator</item>
    </string-array>
</resources>

