<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.CoordinatorSignUpFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo_sign_up_view"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="15dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/coordinator_sign_up_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/coordinator_sign_up"
            android:textAlignment="center"
            android:textColor="@color/light_blue"
            android:textSize="28sp"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/sign_up"
            android:fillViewport="true">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/first_name_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="35dp"
                    android:layout_marginRight="50dp"
                    android:text="@string/first_name"
                    android:textColor="@color/light_blue"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/first_name_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="50dp"
                    android:backgroundTint="@color/light_gray"
                    android:ems="10"
                    android:hint="@string/first_name_hint"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/last_name_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="35dp"
                    android:layout_marginRight="50dp"
                    android:text="@string/last_name"
                    android:textColor="@color/light_blue"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/last_name_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="50dp"
                    android:backgroundTint="@color/light_gray"
                    android:ems="10"
                    android:hint="@string/last_name_hint"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/phone_number_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="35dp"
                    android:layout_marginRight="50dp"
                    android:text="@string/phone_number"
                    android:textColor="@color/light_blue"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/phone_number_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="50dp"
                    android:backgroundTint="@color/light_gray"
                    android:ems="10"
                    android:hint="@string/phone_number_hint"
                    android:inputType="phone"
                    android:minHeight="48dp"
                    android:textSize="16sp"
                    tools:ignore="TextFields" />


                <TextView
                    android:id="@+id/email_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="35dp"
                    android:layout_marginRight="50dp"
                    android:text="@string/email"
                    android:textColor="@color/light_blue"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/email_address_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="50dp"
                    android:backgroundTint="@color/light_gray"
                    android:ems="10"
                    android:hint="@string/email_hint"
                    android:inputType="textEmailAddress"
                    android:minHeight="48dp"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/password_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="50dp"
                    android:text="@string/password"
                    android:textColor="@color/light_blue"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/password_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="50dp"
                    android:backgroundTint="@color/light_gray"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:minHeight="48dp"
                    android:textSize="16sp"
                    android:hint="@string/password_hint"
                    />

                <TextView
                    android:id="@+id/organization_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="35dp"
                    android:layout_marginRight="50dp"
                    android:text="@string/organization"
                    android:textColor="@color/light_blue"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/organization_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="50dp"
                    android:backgroundTint="@color/light_gray"
                    android:ems="10"
                    android:hint="@string/organization_hint"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/sign_in_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="50dp"
                    android:backgroundTint="@color/light_blue"
                    android:text="@string/submit_btn" />


            </LinearLayout>
        </ScrollView>


    </LinearLayout>
</FrameLayout>