<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/send_email_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".fragments.SendEmailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/send_email_address_coordinator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_corners"
            android:ems="10"
            android:hint="@string/to"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:padding="5dp" />

        <EditText
            android:id="@+id/subject_email_service_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_corners"
            android:ems="10"
            android:hint="@string/Subject"
            android:inputType="text"
            android:minHeight="48dp"
            android:padding="5dp"
            android:text=""
            tools:ignore="TextFields" />

        <EditText
            android:id="@+id/send_email_message"
            android:layout_width="match_parent"
            android:layout_height="336dp"
            android:background="@drawable/rounded_corners"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/message"
            android:inputType="textMultiLine"
            android:minHeight="48dp"
            android:padding="5dp"
            tools:ignore="TextFields" />

        <Button
            android:id="@+id/send_email_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="80dp"
            android:layout_marginBottom="15dp"
            android:backgroundTint="@color/green_blue"
            android:drawableLeft="@android:drawable/ic_dialog_email"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/send" />

    </LinearLayout>
</FrameLayout>